Issue #8. And max height and overflow to popup content

--- a/asset/css/mapping.css
+++ b/asset/css/mapping.css
@@ -118,3 +118,8 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+.leaflet-popup-content-wrapper{
+  max-height: 350px;
+  overflow: auto;
+}
